# rust-bcf

./: Cargo.toml
benches/: comparison.rs
benches/vs/: mod.rs  rust_bcf.rs  rust_htslib.rs
resources/: example.compressed.bcf  example.id.bcf  example.uncompressed.bcf  types.bcf
src/: lib.rs  main.rs  parser.rs  reader.rs  record.rs  types.rs
src/record/: eager.rs  lazy.rs  mod.rs
