[package]
name = "rust-bcf"
version = "0.1.0"
authors = ["Till Hartmann <till.hartmann@udo.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bgzip = "0.1"
itertools = "0.10"
anyhow = "1.0"
nom = "6.1"
num_enum = "0.5"
num_enum_derive = "0.5"
strum = { version = "0.20", features = ["derive"] }
counter = "0.5"
multimap = "0.8"
flate2 = "1.0"
niffler = "2.3"

[profile.release]
lto = "fat"
codegen-units = 1

[dev-dependencies]
criterion = "0.3"
rust-htslib = "0.36"

[[bench]]
name = "comparison"
harness = false