[package]
name = "rust-bcf"
version = "0.1.0"
authors = ["Till Hartmann <till.hartmann@udo.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10"
anyhow = "1.0"
nom = "6.1"
num_enum = "0.5"
num_enum_derive = "0.5"
strum = { version = "0.20", features = ["derive"] }
multimap = "0.8"

[dependencies.niffler]
version = "2.3"
default-features = false
features = ["gz"]

[profile.release]
lto = "fat"
codegen-units = 1

[dev-dependencies]
criterion = "0.3"
rust-htslib = "0.36"

[[bench]]
name = "comparison"
harness = false